<resources>
    <string name="app_name" translatable="false">BookletX</string>
    <string name="join_game_label">Join a live game</string>
    <string name="game_id_hint">Game ID</string>
    <string name="username_hint">Nickname</string>
    <string name="settings_label">Settings</string>
    <string name="join_game_button">Join game</string>
    <string name="cheat_switch">Cheat mode</string>
    <string name="cheat_visible_switch">Toggle cheat mode box</string>
    <string name="settings_general">General</string>
    <string name="settings_cheat_default">Enable cheat mode by default</string>
    <string name="cheat_mode_label">Cheat mode</string>
    <string name="status_connecting">Connecting…</string>
    <string name="enter_game_button">Enter game</string>
    <string name="error_no_game">Game does not exist! Go back and try again.</string>
    <string name="error_name_taken">Nickname is already taken! Go back and try again.</string>
    <string name="error_unknown">An unknown error occurred. Try again later.</string>
    <string name="exit_game_button">Exit game</string>
    <string name="conn_success">Successfully connected to game</string>
    <string name="update_balance_button">Update</string>
    <string name="new_balance_hint">New balance</string>
    <string name="glitch_button">Glitch</string>
    <string name="conn_gone">Disconnected</string>
    <string name="game_over">Game finished</string>
    <string name="read_instructions">Read the instructions on the host\'s screen</string>
    <string name="conn_failed">Connection failed. Make sure you\'re online.</string>
    <string name="hacker_password_hint">Enter password</string>
    <string name="set_password_button">Set</string>
    <string name="balance_indicator_status">Balance</string>
    <string name="kick_button">Kick</string>
    <string name="hack_amount_hint">Amount</string>
    <string name="hack_button">Hack</string>
    <string name="steal_button">Steal</string>
    <string name="steal_amount_hint">Amount</string>
    <string name="blook_hint">Blook</string>
    <string name="set_blook_button">Set</string>
</resources>