<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CheatModeFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/statusText"
                    android:text="@string/status_connecting"
                    app:layout_constraintBottom_toTopOf="@+id/enterGameButton"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <Button
                    android:text="@string/enter_game_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/enterGameButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/statusText"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:tag="connected"
                    app:layout_constraintEnd_toStartOf="@+id/exitGameButton"
                    android:enabled="false"
                    app:layout_constraintBottom_toTopOf="@+id/instructionNotice"/>
            <Button
                    android:text="@string/exit_game_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/exitGameButton"
                    android:tag="connected" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/enterGameButton"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/enterGameButton" android:enabled="false"/>
            <TextView
                    android:text="@string/read_instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/instructionNotice"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="center"
                    android:tag="instMode"
                    app:layout_constraintTop_toBottomOf="@+id/enterGameButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="16dp"
                    android:textColor="#BF360C"
                    android:textAllCaps="false" android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/updateBalanceButton"/>
            <!-- the kick player stuff is hidden due to not work -->
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editBalance"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/updateBalanceButton"
                    android:hint="@string/new_balance_hint" android:importantForAutofill="no"
                    android:tag="allMode"
                    app:layout_constraintBaseline_toBaselineOf="@+id/updateBalanceButton"/>
            <Button
                    android:text="@string/update_balance_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/updateBalanceButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/editBalance"
                    android:tag="allMode" app:layout_constraintTop_toBottomOf="@+id/instructionNotice"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/glitchButton"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/glitchChooser"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:entries="@array/default_glitch_spinner_entries"
                    app:layout_constraintEnd_toStartOf="@+id/glitchButton"
                    android:tag="factMode"
                    app:layout_constraintBaseline_toBaselineOf="@+id/glitchButton"/>
            <Button
                    android:text="@string/glitch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/glitchButton"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/glitchChooser"
                    android:tag="factMode" app:layout_constraintBottom_toTopOf="@+id/setPasswordButton"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/updateBalanceButton"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword|text"
                    android:ems="10"
                    android:id="@+id/editHackerPassword"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:hint="@string/hacker_password_hint"
                    android:importantForAutofill="no"
                    android:tag="hackMode" app:layout_constraintBaseline_toBaselineOf="@+id/setPasswordButton"
                    app:layout_constraintEnd_toStartOf="@+id/setPasswordButton"/>
            <Button
                    android:text="@string/set_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/setPasswordButton"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:tag="hackMode" app:layout_constraintBottom_toTopOf="@+id/hackButton"
                    app:layout_constraintTop_toBottomOf="@+id/glitchButton" android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/editHackerPassword"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/hackPlayerChooser"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:entries="@array/default_player_spinner_entries"
                    app:layout_constraintEnd_toStartOf="@+id/editHackAmount"
                    android:tag="hackMode"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editHackAmount"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editHackAmount"
                    app:layout_constraintStart_toEndOf="@+id/hackPlayerChooser" android:layout_marginStart="16dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/hackButton"
                    app:layout_constraintEnd_toStartOf="@+id/hackButton" android:hint="@string/hack_amount_hint"
                    android:importantForAutofill="no" android:tag="hackMode"/>
            <Button
                    android:text="@string/hack_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/hackButton"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editHackAmount" android:layout_marginStart="16dp"
                    android:tag="hackMode"
                    app:layout_constraintBottom_toTopOf="@+id/stealButton"
                    app:layout_constraintTop_toBottomOf="@+id/setPasswordButton" android:layout_marginTop="8dp"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/stealPlayerChooser"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:entries="@array/default_player_spinner_entries"
                    app:layout_constraintEnd_toStartOf="@+id/editStealAmount"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editStealAmount" android:tag="goldMode"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editStealAmount"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/stealPlayerChooser"
                    app:layout_constraintBaseline_toBaselineOf="@+id/stealButton"
                    app:layout_constraintEnd_toStartOf="@+id/stealButton" android:hint="@string/steal_amount_hint"
                    android:importantForAutofill="no" android:tag="goldMode"/>
            <Button
                    android:text="@string/steal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/stealButton"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hackButton" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/editStealAmount" android:layout_marginStart="16dp"
                    android:tag="goldMode"
                    app:layout_constraintBottom_toTopOf="@+id/setBlookButton"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage|textCapWords"
                    android:ems="10"
                    android:id="@+id/editBlookName"
                    app:layout_constraintBaseline_toBaselineOf="@+id/setBlookButton"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/setBlookButton" android:hint="@string/blook_hint"
                    android:tag="joinMode" android:importantForAutofill="no"/>
            <Button
                    android:text="@string/set_blook_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/setBlookButton"
                    app:layout_constraintTop_toBottomOf="@+id/stealButton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/editBlookName" android:tag="joinMode"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>