<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".JoinGameFragment" android:id="@+id/constraintLayout"
                                                   tools:menu="@menu/join_game_menu">
    <TextView
            android:text="@string/join_game_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/joinGameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gameIdEdit" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintVertical_chainStyle="packed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/gameIdEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinGameLabel"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/game_id_hint" android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/usernameEdit" android:layout_marginTop="8dp"
            android:maxLength="6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameEdit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameIdEdit" android:hint="@string/username_hint"
            android:importantForAutofill="no" android:layout_marginTop="8dp"
            android:maxLength="15"
            app:layout_constraintBottom_toTopOf="@+id/cheatModeToggler"/>
    <Button
            android:text="@string/join_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/joinGameButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cheatModeToggler"
            app:layout_constraintHorizontal_bias="0.497"/>
    <CheckBox
            android:text="@string/cheat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cheatModeToggler"
            app:layout_constraintBottom_toTopOf="@+id/joinGameButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" android:enabled="false"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/usernameEdit" android:layout_marginTop="8dp"
            android:checked="true"/>
    <TextView
            android:text="@string/footnote_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/footnote"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
</androidx.constraintlayout.widget.ConstraintLayout>